--- a/src/footer.css
+++ b/src/footer.css
@@ -13,7 +13,7 @@
 
 }
 .footer-1 h3{
-    ont-family: 'Cabin';
+   font-family: 'Cabin';
 font-style: normal;
 font-weight: 700;
 font-size: 24px;
@@ -38,4 +38,7 @@ color: #FFFFFF;
     list-style: none;
     /* margin: auto; */
     padding: 0;
+}
+.footer-icon{
+     background: rgba(245, 246, 250, 0.1);;
 }
