--- a/src/footer.css
+++ b/src/footer.css
@@ -1,16 +1,22 @@
 .footer{
-    /*  */
-    
     background: rgba(25, 29, 108, 0.9);
     mix-blend-mode: normal;
 }
 .main-footer{
-    margin: 40px 135px;
+    margin: 54px 135px;
+    padding-top:40px ;
     display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-   /* align-items: flex-start; */
-    
-
+}
+.copyright{
+    font-family: 'Cabin';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 30px;
+    margin-top: 5.5rem;
+    color: #FFFFFF;
+     
 }
 .footer-1 h3{
    font-family: 'Cabin';
@@ -18,27 +24,118 @@ font-style: normal;
 font-weight: 700;
 font-size: 24px;
 line-height: 30px;
-/* identical to box height, or 125% */
-
-
 color: #FFFFFF;
 
 }
 .footer-1-links{
     list-style: none;
-    /* margin: auto; */
     padding: 0;
+    font-family: 'Cabin';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 40px;
+color: #FFFFFF;
 }
 .footer-2-links{
     list-style: none;
-    /* margin: auto; */
     padding: 0;
+    font-family: 'Cabin';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 40px;
+color: #FFFFFF;
 }
+.submit-btn{
+    display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 7px 31px;
+gap: 10px;
+width: 119px;
+height: 44px;
+font-family: 'Cabin';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 30px;
+color: #FFFFFF;
+background: #6200F0;
+border-radius: 6px;
+border: 1px solid #6200F0;
+}
+.footer-3 h2{
+    font-family: 'Cabin';
+ font-style: normal;
+ font-weight: 700;
+ font-size: 24px;
+ line-height: 30px;
+ color: #FFFFFF;
+ 
+ }
+ .terms{
+    font-family: 'Cabin';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 30px;
+  
+    margin-top: 6.7rem;
+    margin-bottom: 14px;
+    color: #FFFFFF;
+ }
+ .terms h3{
+    font-family: 'Cabin';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 30px;
+    color: #FFFFFF;
+     margin: 0;
+    
+ }
 .footer-3-links{
     list-style: none;
-    /* margin: auto; */
     padding: 0;
+    font-family: 'Cabin';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 40px;
+color: #FFFFFF;
 }
-.footer-icon{
-     background: rgba(245, 246, 250, 0.1);;
+.footer-2 h3{
+    font-family: 'Cabin';
+ font-style: normal;
+ font-weight: 700;
+ font-size: 24px;
+ line-height: 30px;
+ color: #FFFFFF;
+ }
+ .footer-icon{
+     margin-top: 110px;
+ }
+.footer-icon ul{
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    border: 0;
+    width: 170px;
+}
+.footer-icon ul li{
+    width:40px;
+    height: 40px;
+    background: rgba(245, 246, 250, 0.1);
+    border-radius:6px;
+
+    
+
+}
+.footer-icon img{
+    align-self: center;
+    padding-left: 11px;
+    padding-top: 11px;
 }
