--- a/src/landing-page.css
+++ b/src/landing-page.css
@@ -1,12 +1,11 @@
 * {
 	/* max-width: 1000rem; */
 }
-/* .landing{
-    position: fixed;
-    max-width: 100%;
-} */
+.landing{
+    margin: 193px 155px;
+}
 .landing-1{
-    margin: 193px 135px;
+   
     display: grid;
     grid-template-columns: 1fr 1fr;
     /* display: flex;
@@ -36,18 +35,154 @@ color: rgba(51, 51, 51, 0.9);
 
 }
 .landing-1-2{
+    position: absolute;
+    right: 97px;
+    bottom: 457px;
     background: url(blackwoman.jpg);
     background-repeat: no-repeat;
-    width: 632px;
+    width: 702px;
 height: 392px
 }
 .landing-1-2 img{
     position: absolute;
     width: 342px;
 height: 179.53px;
-right: 90px;
-top: 230px;
+right: 60px;
+top: -70px;
 
 /* background: url(.png); */
 filter: drop-shadow(2px 5px 5px rgba(0, 0, 0, 0.1));
+}
+.landing-btn{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 46px;
+}
+.register-btn{  
+padding: 14px 20px;
+gap: 10px;
+width: 150px;
+height: 56px;
+background: #6200F0;
+border-radius: 6px;
+font-family: 'Cabin';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+
+color: #FFFFFF;
+
+}
+.login-btn{
+    width: 150px;
+height: 56px;
+border-radius: 6px;
+font-family: 'Cabin';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+border:1px solid #6200F0;
+color: #6200F0;
+margin-left: 1rem;
+background-color: #FFFFFF;
+/* Inside auto layout */
+
+flex: none;
+order: 0;
+flex-grow: 0;
+
+}
+.landing-icon-lists{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
+    padding: 0 ;
+    margin-top: 69px;
+
+}
+.landing-icon-lists li{
+    padding: 0 25px ; 
+}
+.landing-icon-lists :nth-child(1){
+    padding-left : 0;
+}
+.landing2{
+   
+    margin-top: 200px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        /* display: flex;
+        justify-content: space-between; */
+    
+}
+.landing2-1{
+    background: url(secondSC.jpg);
+    background-repeat: no-repeat;
+    width: 567px;
+height: 299px;
+}
+.landing2-2 h1{
+    font-family: 'Cabin';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 44px;
+    line-height: 53px;
+    
+    color: #030640;
+    
+}
+.landing2-2 p{
+    width: 567px;
+height: 114px;
+    font-family: 'Cabin';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 38px;
+
+color: rgba(51, 51, 51, 0.9);
+
+
+}
+.landing3{
+   
+    margin-top: 200px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        /* display: flex;
+        justify-content: space-between; */
+    
+}
+.landing3-2{
+    background: url(thirdSC.jpg);
+    background-repeat: no-repeat;
+    width: 567px;
+height: 299px;
+}
+.landing3-1 h1{
+    font-family: 'Cabin';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 44px;
+    line-height: 53px;
+    
+    color: #030640;
+    
+}
+.landing3-1 p{
+    width: 567px;
+height: 114px;
+    font-family: 'Cabin';
+font-style: normal;
+font-weight: 400;
+font-size: 24px;
+line-height: 38px;
+
+color: rgba(51, 51, 51, 0.9);
+
+
 }
